Freedom Sanbox Ant Deploy/src/objects/Wellness_Score_Card__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Wellness_Score_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Difference__c</fullName>
        <formula>TODAY() -Wellness_Test_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Difference</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>Wellness_Score_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question_Bank__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question Bank</label>
        <referenceTo>Question_Bank__c</referenceTo>
        <relationshipName>Wellness_Score_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <summarizedField>Wellness_Card_Detail__c.Score__c</summarizedField>
        <summaryForeignKey>Wellness_Card_Detail__c.Wellness_Score_Card__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Wellness_Test_Date__c</fullName>
        <label>Freedom ScaleTest Date</label>
        <type>Date</type>
    </fields>
    <label>Freedom Scale Score Card</label>
    <nameField>
        <label>Freedom Scale Score Card Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Freedom Scale Score Cards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>